# mindprint-model

./: .env.example  .gitignore  .pre-commit-config.yaml  ADAPTER_STACKING_DEBUG.md  CLAUDE.md  README.md  TESTING_INSTRUCTIONS.md  mkdocs.yml  pyproject.toml  requirements.txt  start_training_mac_studio.sh  training_log.txt
.github/workflows/: ci.yml
configs/: bob_loukas_combined.yaml  bob_loukas_textbook.yaml  bob_loukas_transcripts.yaml  dpo_config.yaml  ppo_config.yaml  reward_config.yaml  sft_config.yaml  training_pipeline.yaml
data/bob_loukas/: cycle_theory_preferences.json  cycle_theory_sft.json
data/bob_loukas_improved/: pipeline_stats.json  preference_data.jsonl  sft_data.jsonl
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  MLX_BACKEND_TROUBLESHOOTING.md  MLX_LORA_ARCHITECTURE.md  MLX_LORA_TRAINING_ISSUE.md  MLX_REAL_WORLD_TESTING.md  PROMPT_FORMAT_FIX.md  TESTING_READY.md  TRANSCRIPTS_EVALUATION.md  TRANSCRIPT_TRAINING.md  data_quality_report.md  implementation_status.md  index.md
docs/concepts/: architecture.md  loss-functions.md
docs/contributing/: development-setup.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/mlx/: MLX_BACKEND_TROUBLESHOOTING.md  README.md  (+3 more)
scripts/: __init__.py  analyze_data_quality.py  analyze_training_results.py  compare_backends.py  compare_models.py  download_model.py  download_transcripts.py  improve_existing_dataset.py  local_evaluate.sh  local_monitor.sh  local_train.sh  monitor_mac_studio.sh  monitor_training.sh  quick_deploy.sh  regenerate_preferences.py  restart_training.sh  run_data_prep.py  run_dpo_training.py  run_evaluation.py  run_orpo_training.py  run_post_training.py  run_ppo_training.py  run_test_on_mac_studio.sh  setup_box_config.sh  stop_training.sh  test_dry_run.sh  test_single_topic.sh  test_single_topic_mlx.sh  test_transcript_processing.py  train_on_mac_studio.sh  validate_dataset_quality.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+254 files in other folders)
